# ats-preselection-platform

./: .bandit  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BEST_PRACTICES_REPORT.md  DB_SECURITY_PERFORMANCE_REPORT.md  ESTADOS_CANDIDATOS_GUIA.md  FLUJO_HEADHUNTING_COMPLETO.md  IMPLEMENTATION_REPORT.md  INFRASTRUCTURE_REVIEW.md  ISSUES_RESOLVED.md  MINIMALLY_HACKABLE_CHECKLIST.md  NOTION_WORKSPACE_SETUP.md  PERFORMANCE_REPORT_FRONTEND.md  PROJECT_PLAN.md  PROMPT_COMPLETO_RHSUITE.md  PROYECTO_COMPLETO.md  QA_FINAL_REPORT.md  QA_REPORT.md  QA_SECURITY_PERFORMANCE_REPORT.md  QA_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_v1.1.0.md  REPORTE_EJECUTIVO_TESTS.md  REVIEW_REPORT.md  SCORING_COMPLETE.md  SCORING_IMPLEMENTATION.md  SECRETS_CONFIG_AUDIT_REPORT.md  SECURITY.md  SECURITY_AUDIT_AUTH.md  SECURITY_AUDIT_REPORT.md  SECURITY_BASELINE_REPORT.md  SECURITY_CHECKLIST.md  SECURITY_DEPLOYMENT.md  SECURITY_FIXES.md  SECURITY_TEST_REPORT.md  SETUP.md  (+10 more)
backend/: .env.example  CORE_ATS_DATA_MODEL.md  Dockerfile  MATCHING_IMPLEMENTATION_REPORT.md  SECURITY_FIXES.md  alembic.ini  create_admin.py  create_hh_tables.py  pyproject.toml  pytest.ini  requirements-production.txt  requirements.txt  seed_headhunting_data.py  start-backend.sh  verify_security.py
backend/app/: main.py  metrics.py
backend/app/api/: __init__.py  audit.py  auth.py  candidates.py  communications.py  config.py  document_pipeline.py  evaluations.py  health.py  jobs.py  matching.py  message_templates.py  metrics.py  rhtools.py  users.py  whatsapp_webhook.py
backend/app/core/: __init__.py  alerts.py  audit.py  auth.py  authorization.py  cache.py  config.py  (+14 more)
backend/docs/: DOCUMENT_PIPELINE.md  INTEGRATION_CONFIG.md  PIPELINE_IMPLEMENTATION_SUMMARY.md
backend/migrations/: README.md  env.py
backend/scripts/: create_cv_tables.sql  generate_secret.py  migrate.sh  reset_db.sh  seed.sh
backend/tests/: conftest.py  test_auth.py  test_auth_security.py  test_candidates.py  test_communication_service.py  test_config.py  test_core_ats.py  test_cors.py  test_e2e_critical.py  test_evaluations.py  test_input_validation.py  test_integration.py  test_integrations.py  test_jobs.py  test_linkedin_integration.py  test_matching_service.py  test_message_templates_api.py  test_models.py  test_odoo_integration.py  test_rate_limit.py  test_security.py  test_security_headers.py  test_sync_service.py  test_template_renderer.py  test_users.py  test_whatsapp_service.py  test_zoho_integration.py
(+310 files in other folders)
